--- a/index.html
+++ b/index.html
@@ -30,6 +30,31 @@
       </div>
     </div>
     <!--  -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+
+    <script>
+      // Your web app's Firebase configuration
+      // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+      var firebaseConfig = {
+        apiKey: "AIzaSyDHLuL93Qdd9HxHOqLAq00NfTW5PnHV-_8",
+        authDomain: "roundmidnightworkshop.firebaseapp.com",
+        projectId: "roundmidnightworkshop",
+        storageBucket: "roundmidnightworkshop.appspot.com",
+        messagingSenderId: "20656621361",
+        appId: "1:20656621361:web:059d5428e2dd33102a1210",
+        measurementId: "G-E2MMKQSDLE",
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+      firebase.analytics();
+      let db = firebase.firestore();
+    </script>
     <script src="app.js"></script>
   </body>
 </html>
