--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
     </div>
     
-    <form id="newQuestionForm">
+    <form id="newQuestionForm" class="d-none">
   <div class="newQuestionTypes">
     <label for="newQuestionTypeQCM">
       QCM
