--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <header class="header">
-        <div class="score"><span class="scoreText"></span></div>
+        <div class="score"><span class="scoreText"></span>points</div>
         <nav class="nav">
           <!-- <img src="./img/menu.svg" alt="" /> -->
         </nav>
@@ -23,10 +23,10 @@
         </div>
       </div>
       <div class="actionsArea">
-        <button class="actionBtn">🔥</button>
-        <button id="btnHelp" class="actionBtn">💭</button>
+        <button class="actionBtn">🔥<span>Défi</span></button>
+        <button id="btnHelp" class="actionBtn">💭<span>Aide</span></button>
         <button type="submit" form="questionChoices" class="actionBtn">
-          ✅
+          ✅<span>Valider</span>
         </button>
       </div>
     </div>
